--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-discord.py==0.16.7
 aiohttp>=1.0.0
 async-timeout==1.2.0
 chardet==3.0.2
@@ -8,4 +7,7 @@ PyNaCl==1.0.1
 cffi>=1.1.0
 pycparser==2.17
 six==1.10.0
-youtube_dl==2017.4.1
+discord.py==0.16.7
+youtube_dl
+pip
+cffi==1.6.0
