--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-aiohttp>=1.0.0
-async-timeout==1.2.0
-chardet==3.0.2
-multidict>=2.0
-websockets>=3.1
-PyNaCl==1.0.1
-pycparser==2.17
-six==1.10.0
-discord.py==0.16.7
+discord.py[voice] ~= 0.12.0
 youtube_dl
 pip
 cffi==1.6.0
